feat(createDoc): create document - create UI for create document - create action to process new document [Finishes #147728509]

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
   <script src='/lib/jquery/dist/jquery.min.js'></script>
   <script src="/lib/materialize/bin/materialize.js"></script>
+  <script src='/lib/tinymce/tinymce.min.js'></script>
+   
+  
   <script>
-    $(document).ready(function(){
+
+        
+    $(document).ready(() => {
       $(".button-collapse").sideNav();
       $('ul.tabs').tabs();
     });
