feat(auth): logout - display logout link - clear user information and JWT from localstorage [Delivers #148120609]

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,13 @@
   <script src='/lib/jquery/dist/jquery.min.js'></script>
   <script src="/lib/materialize/bin/materialize.js"></script>
   <script src='/lib/tinymce/tinymce.min.js'></script>
-   
-  
-  <script>
-
-        
+  <script>  
     $(document).ready(() => {
+       // initialize  materailise tab and side nav
       $(".button-collapse").sideNav();
       $('ul.tabs').tabs();
     });
-   </script>
+  </script>
 </head>
 <body >
    <div id = "app"></div>
