--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
   <!-- Compiled and minified JavaScript -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/> 
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <script src='/lib/jquery/dist/jquery.min.js'></script>
+  <!--<script src='/lib/jquery/dist/jquery.min.js'></script>-->
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script src="/lib/materialize/bin/materialize.js"></script>
   <script src='/lib/tinymce/tinymce.min.js'></script>
   <script src="/lib/toastr/toastr.js"></script>
@@ -18,16 +22,10 @@
     $(document).ready(() => {
        // initialize  materailise tab and side nav
       $(".button-collapse").sideNav();
-      $('ul.tabs').tabs();
+      // $('ul.tabs').tabs();
     });
   </script>
     <script src="/lib/FileSaver.min.js"></script>
-    <!--
-    Mandatory in IE 6, 7, 8 and 9.
-    -->
-    <!--[if IE]>
-        <script type="text/javascript" src="examples/vendor/jszip-utils-ie.js"></script>
-    <![endif]-->
     <script>
     function exportDoc(name, content) {
        var htmlString = content;
@@ -42,39 +40,6 @@
       var blob = new Blob([byteNumbers], {type: 'text/html'});
       saveAs(blob, name + '.docx');
     }
-    // loadFile("/exportDocTemplate.docx",function(error,content){
-    //     if (error) { throw error };
-    //     var zip = new JSZip(content);
-    //     var doc=new Docxtemplater().loadZip(zip)
-    //     doc.setData({
-    //         first_name: 'John',
-    //         last_name: 'Doe',
-    //         phone: '0652455478',
-    //         description: 'New Website'
-    //     });
-
-    //     try {
-    //         // render the document (replace all occurences of {first_name} by John, {last_name} by Doe, ...)
-    //         doc.render()
-    //     }
-    //     catch (error) {
-    //         var e = {
-    //             message: error.message,
-    //             name: error.name,
-    //             stack: error.stack,
-    //             properties: error.properties,
-    //         }
-    //         console.log(JSON.stringify({error: e}));
-    //         // The error thrown here contains additional information when logged with JSON.stringify (it contains a property object).
-    //         throw error;
-    //     }
-
-    //     var out=doc.getZip().generate({
-    //         type:"blob",
-    //         mimeType: "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
-    //     }) //Output the document using Data-URI
-    //     saveAs(out,"output.docx")
-    // })
    
     </script>
 </head>
